--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>安监总局综合信息管理平台</title>
-    <link rel="stylesheet" href="css/homepage.css" type="text/css">
-    <link rel="stylesheet" href="css/base.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery.slideBox.css" type="text/css">
-    <script src="js/nav.js" type="text/javascript"></script>
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script src="js/jquery.slideBox.min.js"></script>
+    <link rel="stylesheet" href="../static/css/homepage.css" type="text/css">
+    <link rel="stylesheet" href="../static/css/base.css" type="text/css">
+    <link rel="stylesheet" href="../static/css/jquery.slideBox.css" type="text/css">
+    <script src="../static/js/nav.js" type="text/javascript"></script>
+    <script src="../static/js/jquery-1.8.3.min.js"></script>
+    <script src="../static/js/jquery.slideBox.min.js"></script>
 </head>
 <body>
     <div class="header">
@@ -23,7 +23,7 @@
                 <a href="javascript:;"> 搜索</a>
             </div>
             <div class="logo">
-                <img src="img/PicsArt_08-27-01.26.49.png" >
+                <img src="../static/img/PicsArt_08-27-01.26.49.png" >
             </div>
         </div>
     </div>
