--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,24 +10,23 @@
 <body>
     <div class="container">
         <h1>用户注册</h1>
-        <form method="post">
+        <form method="post" action="#">
             <input type="text"  placeholder="账号" name="userid" required="required" oninvalid="setCustomValidity('不能为空')" >
             <input type="password"  placeholder="输入密码" name="user_pw" required="required" oninvalid="setCustomValidity('不能为空')" >
             <input type="password" placeholder="再次输入密码" name="re_pw" required="required" oninvalid="setCustomValidity('不能为空')">  
             <input type="text" placeholder="真实姓名" name="user_name" required="required" oninvalid="setCustomValidity('不能为空')"> 
-            <input type="text" placeholder="手机号" name="re_pw" required="required" oninvalid="setCustomValidity('不能为空')"> 
-            <input type="text" placeholder="地址" name="re_pw" required="required" oninvalid="setCustomValidity('不能为空')">    
-            <input type="text" placeholder="年龄" name="re_pw" required="required" oninvalid="setCustomValidity('不能为空')">
+            <input type="number" placeholder="手机号" name="user_phone" required="required" oninvalid="setCustomValidity('不能为空')">
+            <input type="text" placeholder="地址" name="user_address" required="required" oninvalid="setCustomValidity('不能为空')">
+            <input type="number" placeholder="年龄" name="user_age" required="required" oninvalid="setCustomValidity('不能为空')">
             <div class="gender-choose">
                 性别：
-                女 <input type="radio" name="sex" value="1" class="girl"> 
-                男 <input type="radio" name="sex" value="2" class="man">
+                女 <input type="radio" name="user_sex" value="1" class="girl">
+                男 <input type="radio" name="user_sex" value="2" class="man">
             </div>
             <div class="but">
                 <button class="sub" type="submit" name="submit" onclick="re_succ()">注册</button>
                 <button class="sub" onclick="window.open('homepage.html')">返回</button> 
             </div>
-             
         </form>
     </div>
 </body>
